[project]
name = "cc_management"
description = "Credit Card Utils"
authors = [
    { name = "Agile Shift", email = "contacto@gruporeal.org" }
]

requires-python = ">=3.12"

readme = "README.md"
license = { file = "LICENSE.txt" }
dynamic = ["version"]

dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
