[project]
name = "cc_management"
authors = [
    { name = "Agile Shift", email = "contacto@gruporeal.org" }
]
description = "Credit Card Utils"
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["version"]

dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
