[project]
name = "cc_management"
authors = [
    { name = "Agile Shift", email = "contacto@gruporeal.org" }
]
description = "Credit Card Utils"
requires-python = ">=3.10,<3.13"
readme = "README.md"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/AgileShift/cc_management"
Repository = "https://github.com/AgileShift/cc_management.git"
"Bug Reports" = "https://github.com/AgileShift/cc_management/issues"

dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[tool.ruff.lint]
typing-modules = ["frappe.types.DF"]
